--- a/index.html
+++ b/index.html
@@ -23,8 +23,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Paris Métro 1</title>
   <link rel="stylesheet" type="text/css" href="styles/inline.css">
+  <!-- Add link rel manifest -->
   <link rel="manifest" href="/manifest.json">
-  
+  <!--Add meta theme-color -->
+  <meta name="theme-color" content="#2F3BA2"/>
+  <!-- Add iOS meta tags and icons -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="PWA Clima">
+  <link rel="apple-touch-icon" href="/images/icons/icon-152x152.png">
+  <!-- CODELAB: Add description here -->
+  <meta name="description" content="Una aplicacion de metro">
 
 </head>
 <body>
