F5:Integracion con aplicaciones iOS

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <link rel="manifest" href="/manifest.json">
   <!--Add meta theme-color -->
   <meta name="theme-color" content="#2F3BA2"/>
-  <!-- Add iOS meta tags and icons -->
+  <!-- Add iOS meta tags and icons F5: integracion con aplicaciones iOS-->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="PWA Clima">
